# MLisp

./: .gitignore  .ocamlformat  AGENTS.md  CLAUDE.md  MODULE_OPTIMIZATION_ANALYSIS.md  Makefile  PRODUCTION_READINESS_ASSESSMENT.md  README.md  README.txt  README_zh.txt  dune-project  mlisp.opam  package-lock.json  package.json  run_tests.sh  test_repl_warning.mlisp
.github/workflows/: ci.yml  test.yml
docs/: language-spec.txt  monorepo-migration.md
docs/plans/: 2025-01-28-mlisp-basic-capabilities-expansion.md  (+5 more)
example/: package.mlisp
stdlib/: _meta.mlisp  assert.mlisp  core.mlisp  list.mlisp  ocaml.mlisp
test/: 01_basic_types.mlisp  02_arithmetic.mlisp  03_fibonacci.mlisp  04_conditionals.mlisp  05_variables.mlisp  06_functions.mlisp  07_closures.mlisp  08_let_bindings.mlisp  09_modules.mlisp  10_strings.mlisp  11_apply.mlisp  12_macros_simple.mlisp  53_syntax_sugar.mlisp  54_variadic_macros.mlisp  apply.mlisp  cache_fix_test.mlisp  closure_simple_test.mlisp  closures.mlisp  comparison.mlisp  error_example.mlisp  floats.mlisp  lexical_scope_test.mlisp  macroexpand.mlisp  mlisp.ml  module_basic_validation.mlisp  module_closure_test.mlisp  module_comprehensive_test.mlisp  module_simple_test.mlisp  module_test.mlisp  module_warning_direct_test.mlisp  module_warning_final_test.mlisp  module_warning_simple_test.mlisp  module_warning_test.mlisp  module_warning_working_test.mlisp  normal_test.mlisp  test_summary.sh  variables.mlisp  xfail_error_messages.mlisp
test-workspace/: EXTENSION_TESTING.md  example.mlisp  macros_test.mlisp  modules_test.mlisp  syntax_test.mlisp
(+46 files in other folders)
